--- a/index.html
+++ b/index.html
@@ -6,58 +6,101 @@
     <title>MaraisRunning</title>
     <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --primary-color: #f0f0f0;
+            --secondary-color: #ffffff;
+            --text-color: #000000;
+            --menu-bg-color: rgba(255, 255, 255, 0.8);
+        }
+
         body, html {
             margin: 0;
             padding: 0;
             height: 100%;
             font-family: Arial, sans-serif;
+            font-size: 16px;
+            line-height: 1.6;
+            color: var(--text-color);
         }
+
         .title-section {
             height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f0f0f0;
+            background-color: var(--primary-color);
         }
+
         h1 {
             font-family: 'Spectral', serif;
-            font-size: 4rem;
+            font-size: 3rem;
             text-align: center;
         }
+
         .welcome-section, .section {
-            padding: 50px 20px;
-            background-color: #ffffff;
+            padding: 2rem 1rem;
+            background-color: var(--secondary-color);
         }
+
         .image-grid {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-            margin-top: 30px;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1rem;
+            margin-top: 1.5rem;
         }
+
         .image-placeholder img {
             max-width: 100%;
             height: auto;
+            display: block;
         }
+
         .menu {
             position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 10px;
+            top: 1rem;
+            right: 1rem;
+            background-color: var(--menu-bg-color);
+            padding: 0.5rem;
             border-radius: 5px;
             z-index: 1000;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-end;
         }
+
         .menu select, .menu a {
-            margin: 0 5px;
-            padding: 5px;
+            margin: 0.25rem;
+            padding: 0.5rem;
             text-decoration: none;
-            color: black;
+            color: var(--text-color);
+            background-color: var(--secondary-color);
+            border: 1px solid var(--text-color);
+            border-radius: 3px;
+            font-size: 0.9rem;
         }
+
         .section {
             display: none;
         }
+
         .section.active {
             display: block;
+        }
+
+        @media screen and (max-width: 768px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            .menu {
+                left: 1rem;
+                right: 1rem;
+                justify-content: center;
+            }
+
+            .image-grid {
+                grid-template-columns: 1fr;
+            }
         }
     </style>
 </head>
@@ -80,18 +123,14 @@
 
     <section class="welcome-section">
         <h2>Välkommen</h2>
-        <p>En springklubb, ett gäng, många drömmar.
-            ett gäng individualister som springer i lag
-        </p>
+        <p>En springklubb, ett gäng, många drömmar. Ett gäng individualister som springer i lag.</p>
         <div class="image-grid">
-            <div class="image-placeholder"><img width="450px" src="leifgw.jpg" alt="Leif GW"></div>
-            <div class="image-placeholder"><img width="450px" src="running paris.jpg" alt="Running in Paris"></div>
-            <div class="image-placeholder"><img width="450px" src="seine.jpg" alt="Seine"></div>
-            <div class="image-placeholder"><img width="450px" src="coffeinparis.jpg" alt="Coffee in Paris"></div>
+            <div class="image-placeholder"><img src="leifgw.jpg" alt="Leif GW"></div>
+            <div class="image-placeholder"><img src="running paris.jpg" alt="Running in Paris"></div>
+            <div class="image-placeholder"><img src="seine.jpg" alt="Seine"></div>
+            <div class="image-placeholder"><img src="coffeinparis.jpg" alt="Coffee in Paris"></div>
         </div>
-        <p>Onsdag 17:30, 75002 paris 
-        ses där
-        </p>
+        <p>Onsdag 17:30, 75002 Paris. Ses där!</p>
     </section>
 
     <section id="spellistor" class="section">
@@ -137,13 +176,16 @@
             const sections = document.querySelectorAll('.section');
             const menuLinks = document.querySelectorAll('.menu a');
 
-            window.addEventListener('scroll', function() {
+            function checkScroll() {
                 if (window.scrollY > titleSection.offsetHeight / 2) {
                     welcomeSection.style.opacity = '1';
                 } else {
                     welcomeSection.style.opacity = '0';
                 }
-            });
+            }
+
+            window.addEventListener('scroll', checkScroll);
+            checkScroll(); // Initial check
 
             menuLinks.forEach(link => {
                 link.addEventListener('click', function(e) {
@@ -153,7 +195,10 @@
                         section.classList.remove('active');
                     });
                     document.getElementById(targetId).classList.add('active');
-                    window.scrollTo(0, document.getElementById(targetId).offsetTop);
+                    window.scrollTo({
+                        top: document.getElementById(targetId).offsetTop,
+                        behavior: 'smooth'
+                    });
                 });
             });
 
