--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
         </div>
         <p>Onsdag 17:30, 75002 Paris. Ses där!</p>
     </section>
+        <p>Onsdag 17:30, 75002 Paris. Ses där!</p>
+    </section>
+
 
     <section id="spellistor" class="section">
         <h2>Spellistor</h2>
