--- a/index.html
+++ b/index.html
@@ -125,14 +125,13 @@
         <h2>Välkommen</h2>
         <p>En springklubb, ett gäng, många drömmar. Ett gäng individualister som springer i lag.</p>
         <div class="image-grid">
-            <div class="image-placeholder"><img src="leifgw.jpg" alt="Leif GW"></div>
             <div class="image-placeholder"><img src="running paris.jpg" alt="Running in Paris"></div>
             <div class="image-placeholder"><img src="seine.jpg" alt="Seine"></div>
             <div class="image-placeholder"><img src="coffeinparis.jpg" alt="Coffee in Paris"></div>
         </div>
         <p>Onsdag 17:30, 75002 Paris. Ses där!</p>
     </section>
-        <p>Onsdag 17:30, 75002 Paris. Ses där!</p>
+        <p>Helst bara positiv kontakt: maraisrunclub@gmail.com</p>
     </section>
 
 
