--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
 
     <section class="title-section">
-        <h1>MaraisRunningClub</h1>
+        <h1>MaraisRunningClub/the2ndRunClub</h1>
     </section>
 
     <section class="welcome-section">
