--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
             <option value="en">English</option>
             <option value="fr">Français</option>
         </select>
-        <a href="#spellistor">Spellistor</a>
-        <a href="#rutter">Rutter</a>
-        <a href="#vi-som-springer">Vi som springer</a>
-        <a href="#merch">Merch</a>
+        <a href="#Playlists">Playlists</a>
+        <a href="#Routes">Routes</a>
+        <a href="#Runners-Code">Runners Code</a>
+        <a href="#Merch">Merch</a>
     </div>
 
     <section class="title-section">
@@ -123,21 +123,24 @@
     </section>
 
     <section class="welcome-section">
-        <h2>Välkommen</h2>
-        <p>En springklubb, ett gäng, många drömmar. Ett gäng individualister som springer i lag.</p>
+        <h2>The2nd</h2>
+        <p>Welcome to The Second Running Club based in the 2nd arrondissement where passion for running meets the charm of Paris' 2nd arrondissement!
+Our club, affectionately known as "The Second," is more than just a group of runners—we're a community that celebrates the pulse-intense and vibrant districts of Paris. Founded in 2025, we've quickly become a fixture in the local fitness scene, bringing together runners of all levels, from beginners to seasoned marathoners.</p>
         <div class="image-grid">
             <div class="image-placeholder"><img src="running paris.jpg" alt="Running in Paris"></div>
             <div class="image-placeholder"><img src="seine.jpg" alt="Seine"></div>
             <div class="image-placeholder"><img src="coffeinparis.jpg" alt="Coffee in Paris"></div>
         </div>
-        <p>Onsdag 17:30, 75002 Paris. Ses där!</p>
+        <p>Every Wednesday 17:30 75002 Paris. Bring your friends!</p>
     </section>
-        <p>Helst bara positiv kontakt: maraisrunclub@gmail.com</p>
+       <p>2025 Premiere at Rem´sCoffee(3 rue de mulhouse, Paris, France 75002) wednesday 15/1</p>
+    </section>
+        <p>Positive FeedBack: maraisrunclub@gmail.com</p>
     </section>
 
 
-    <section id="spellistor" class="section">
-        <h2>Spellistor</h2>
+    <section id="Playlists" class="section">
+        <h2>Playlists</h2>
         <div class="image-grid">
             <div class="image-placeholder"><img src="playlist1.jpg" alt="Playlist 1"></div>
             <div class="image-placeholder"><img src="playlist2.jpg" alt="Playlist 2"></div>
@@ -145,8 +148,8 @@
         <p>Exempel</p>
     </section>
 
-    <section id="rutter" class="section">
-        <h2>Rutter</h2>
+    <section id="Routes" class="section">
+        <h2>Routes</h2>
         <div class="image-grid">
             <div class="image-placeholder"><img src="route1.jpg" alt="Route 1"></div>
             <div class="image-placeholder"><img src="route2.jpg" alt="Route 2"></div>
@@ -154,8 +157,8 @@
         <p>Exempel</p>
     </section>
 
-    <section id="vi-som-springer" class="section">
-        <h2>Vi som springer</h2>
+    <section id="Runners-Playbook" class="section">
+        <h2>Runners Playbook</h2>
         <div class="image-grid">
             <div class="image-placeholder"><img src="runner1.jpg" alt="Runner 1"></div>
             <div class="image-placeholder"><img src="runner2.jpg" alt="Runner 2"></div>
@@ -163,7 +166,7 @@
         <p>Exempel</p>
     </section>
 
-    <section id="merch" class="section">
+    <section id="Merch" class="section">
         <h2>Merch</h2>
         <div class="image-grid">
             <div class="image-placeholder"><img src="merch1.jpg" alt="Merch 1"></div>
