--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </section>
 
     <section class="welcome-section">
-        <h2>The2nd</h2>
+            <h2>The2nd</h2>
         <p>Welcome to The Second Running Club based in the 2nd arrondissement where passion for running meets the charm of Paris' 2nd arrondissement!
 Our club, affectionately known as "The Second," is more than just a group of runners—we're a community that celebrates the pulse-intense and vibrant districts of Paris. Founded in 2025, we've quickly become a fixture in the local fitness scene, bringing together runners of all levels, from beginners to seasoned marathoners.</p>
         <div class="image-grid">
@@ -133,7 +133,7 @@ Our club, affectionately known as "The Second," is more than just a group of run
         </div>
         <p>Every Wednesday 17:30 75002 Paris. Bring your friends!</p>
     </section>
-       <p>2025 Premiere at Rem´sCoffee(3 rue de mulhouse, Paris, France 75002) wednesday 15/1</p>
+        <p>2025 Premiere at Rem´sCoffee(3 rue de mulhouse, Paris, France 75002) wednesday 15/1</p>
     </section>
         <p>Positive FeedBack: maraisrunclub@gmail.com</p>
     </section>
@@ -145,7 +145,7 @@ Our club, affectionately known as "The Second," is more than just a group of run
             <div class="image-placeholder"><img src="playlist1.jpg" alt="Playlist 1"></div>
             <div class="image-placeholder"><img src="playlist2.jpg" alt="Playlist 2"></div>
         </div>
-        <p>Exempel</p>
+        <p>Adele, Adele and more Adele</p>
     </section>
 
     <section id="Routes" class="section">
@@ -154,7 +154,7 @@ Our club, affectionately known as "The Second," is more than just a group of run
             <div class="image-placeholder"><img src="route1.jpg" alt="Route 1"></div>
             <div class="image-placeholder"><img src="route2.jpg" alt="Route 2"></div>
         </div>
-        <p>Exempel</p>
+        <p>Coming Soon</p>
     </section>
 
     <section id="Runners-Playbook" class="section">
@@ -163,7 +163,7 @@ Our club, affectionately known as "The Second," is more than just a group of run
             <div class="image-placeholder"><img src="runner1.jpg" alt="Runner 1"></div>
             <div class="image-placeholder"><img src="runner2.jpg" alt="Runner 2"></div>
         </div>
-        <p>Exempel</p>
+        <p>Coming Soon</p>
     </section>
 
     <section id="Merch" class="section">
@@ -172,7 +172,7 @@ Our club, affectionately known as "The Second," is more than just a group of run
             <div class="image-placeholder"><img src="merch1.jpg" alt="Merch 1"></div>
             <div class="image-placeholder"><img src="merch2.jpg" alt="Merch 2"></div>
         </div>
-        <p>Exempel</p>
+        <p>Coming very Soon</p>
     </section>
 
     <script>
