--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
 
     <section class="welcome-section">
             <h2>The2nd</h2>
-        <p>Welcome to The Second Running Club based in the 2nd arrondissement where passion for running meets the charm of Paris' 2nd arrondissement!
-Our club, affectionately known as "The Second," is more than just a group of runners—we're a community that celebrates the pulse-intense and vibrant districts of Paris. Founded in 2025, we've quickly become a fixture in the local fitness scene, bringing together runners of all levels, from beginners to seasoned marathoners.</p>
+        <p>This is the Running Club based in the 2nd arrondissement of paris.
+This gang, affectionately known as "The Second," is more than just a group of runners—we're a community that celebrates the pulse-intense and vibrant districts of Paris. Founded in 2024, we've quickly become a fixture in the local fitness scene, bringing together runners of all levels, from beginners to seasoned crunchers of tarmac.</p>
         <div class="image-grid">
             <div class="image-placeholder"><img src="running paris.jpg" alt="Running in Paris"></div>
             <div class="image-placeholder"><img src="seine.jpg" alt="Seine"></div>
             <div class="image-placeholder"><img src="coffeinparis.jpg" alt="Coffee in Paris"></div>
         </div>
-        <p>Every Wednesday 17:30 75002 Paris. Bring your friends!</p>
+        <p>75002 Paris. Bring your friends!</p>
     </section>
-        <p>2025 Premiere at Rem´sCoffee(3 rue de mulhouse, Paris, France 75002) wednesday 15/1</p>
+        <p> https://www.instagram.com/maraisrunclub/</p>
     </section>
         <p>Positive FeedBack: maraisrunclub@gmail.com</p>
     </section>
@@ -145,7 +145,7 @@ Our club, affectionately known as "The Second," is more than just a group of run
             <div class="image-placeholder"><img src="playlist1.jpg" alt="Playlist 1"></div>
             <div class="image-placeholder"><img src="playlist2.jpg" alt="Playlist 2"></div>
         </div>
-        <p>Adele, Adele and more Adele</p>
+        <p>https://www.youtube.com/watch?v=myOrsgchFMY&list=PL9VKQfN_phtAm6_EmvSqgS1oYPQBBynKK</p>
     </section>
 
     <section id="Routes" class="section">
