--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     <section class="title-section">
         <h1>MaraisRunningClub
-            /the2ndRunClub</h1>
+            /the2nd</h1>
     </section>
 
     <section class="welcome-section">
@@ -133,9 +133,9 @@ This gang, affectionately known as "The Second," is more than just a group of ru
         </div>
         <p>75002 Paris. Bring your friends!</p>
     </section>
-        <p> https://www.instagram.com/maraisrunclub/</p>
+        <p>      Instagram: maraisrunclub/</p>
     </section>
-        <p>Positive FeedBack: maraisrunclub@gmail.com</p>
+        <p>      Positive FeedBack: maraisrunclub@gmail.com</p>
     </section>
 
 
